Fix navbar overflow

--- a/src/App.css
+++ b/src/App.css
@@ -15,17 +15,17 @@ p {
 }
 
 body {
-    width: 100%;
 	height: 100%;
-    margin: 0 0 0 30px;
+    padding-left: 3%;
 	overflow-x: hidden;
+    box-sizing: border-box;
 }
 
 body :not(h1, h2, h3) {
     font-family: 'Noto Sans', Helvetica, Arial;
 }
 
-/* LandingPage */
+/* Landing Page */
 @media (max-width: 767px) {
     #landing-page {
         text-align: center;
@@ -33,20 +33,17 @@ body :not(h1, h2, h3) {
 }
 
 #landing-page-heading {
-    size: 1px;
+    font-size: 200%;
 }
 
 #landing-page-text {
-
+    font-size: 150%;
 }
 
 /* Navbar */
 @media (max-width: 767px) {
     nav {
         width: 100%;
-		margin-left: -30px;
-		padding: 10px 30px 0 30px;
-
 		display: flex;
 		flex-direction: column;
 		align-items: center;
@@ -67,9 +64,7 @@ body :not(h1, h2, h3) {
 @media (min-width: 767px) {
 	nav {
 		width: 100%;
-        margin-left: -30px;
-		padding: 0 30px 0 35px;
-
+		padding-right: 30px;
 		display: flex;
         align-items: center;
 		justify-content: space-between;
@@ -82,7 +77,7 @@ body :not(h1, h2, h3) {
 }
 
 #logo {
-	font-size: 20px;
+	font-size: 130%;
     color: black;
     text-decoration: none;
 }
@@ -92,7 +87,6 @@ body :not(h1, h2, h3) {
     margin: 0;
   	padding: 0;
 }
-
 
 /* Forms and Modals */
 form {
@@ -312,6 +306,7 @@ footer {
   left: 0;
   right: 0;
   width: 100%;
-  padding: 20px 30px 20px 35px;
+  padding-bottom: 30px;
+    padding-right: 30px;
   text-align: right;
 }
